changed metrics to be displayed

--- a/index.html
+++ b/index.html
@@ -106,39 +106,40 @@
                         </div>
                     </div>
 
-                    <div class="metric-card fade-in">
-                        <div class="metric-header">
-                            <div class="metric-title">Active Assessments</div>
-                            <div class="metric-icon">📝</div>
-                        </div>
-                        <div class="metric-value" id="activeAssessments">30</div>
-                        <div class="metric-change positive">
-                            <span class="change-arrow">↗</span>
-                            8.2% improvement
-                        </div>
-                    </div>
-
-                    <div class="metric-card fade-in">
-                        <div class="metric-header">
-                            <div class="metric-title">Success Rate</div>
-                            <div class="metric-icon">🎯</div>
-                        </div>
-                        <div class="metric-value" id="successRate">75%</div>
-                        <div class="metric-change negative">
-                            <span class="change-arrow">↘</span>
-                            1.8% below target
-                        </div>
-                    </div>
-
-                    <div class="metric-card fade-in">
-                        <div class="metric-header">
-                            <div class="metric-title">Average Score</div>
-                            <div class="metric-icon">📊</div>
-                        </div>
-                        <div class="metric-value" id="averageScore">68.2</div>
-                        <div class="metric-change positive">
-                            <span class="change-arrow">↗</span>
-                            5.1% increase
+                    <!-- Pre-Assessment Snapshot Container -->
+                    <div style="flex: 3;">
+                        <div class="metric-card" style="margin-bottom: 10px; background: #f8fafc; box-shadow: none; border: none;">
+                            <div class="metric-title" style="font-size: 16px; font-weight: 600; color: #1e293b; margin-bottom: 10px;">Pre-Assessment Snapshot</div>
+                            <div class="metrics-grid" style="margin-bottom: 0;">
+                                <div class="metric-card fade-in">
+                                    <div class="metric-header">
+                                        <div class="metric-title">Enrolled</div>
+                                        <div class="metric-icon">🟦</div>
+                                    </div>
+                                    <div class="metric-value">40</div>
+                                </div>
+                                <div class="metric-card fade-in">
+                                    <div class="metric-header">
+                                        <div class="metric-title">Not Started</div>
+                                        <div class="metric-icon">🟧</div>
+                                    </div>
+                                    <div class="metric-value">2</div>
+                                </div>
+                                <div class="metric-card fade-in">
+                                    <div class="metric-header">
+                                        <div class="metric-title">Cleared</div>
+                                        <div class="metric-icon">🟩</div>
+                                    </div>
+                                    <div class="metric-value">30</div>
+                                </div>
+                                <div class="metric-card fade-in">
+                                    <div class="metric-header">
+                                        <div class="metric-title">Failed</div>
+                                        <div class="metric-icon">🟥</div>
+                                    </div>
+                                    <div class="metric-value">3</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
